fix(EV-4367):  aligning images properly within responses when migrated (#2590)

--- a/src/client/index.css
+++ b/src/client/index.css
@@ -1141,8 +1141,8 @@ response {
 .imagelabeldragdrop-droppable img,
 .main img,
 .responses_box img {
-  max-width: 151.5px;
-  max-height: 100px;
+  max-width: 151.5px !important;
+  max-height: 100px !important;
   width: auto !important;
 }
 
